[gd_scene load_steps=21 format=3 uid="uid://duf6fdpme1wuv"]

[ext_resource type="Script" path="res://scripts/builder.gd" id="1_d0omy"]
[ext_resource type="Script" path="res://scripts/hp_bar.gd" id="2_2fjho"]
[ext_resource type="PackedScene" uid="uid://cr87fdyx5cywf" path="res://scenes/hitbox.tscn" id="2_dnb7x"]
[ext_resource type="Texture2D" uid="uid://ddty0tbywt4jy" path="res://assets/sprites/characters/swordman_1.png" id="2_wvue0"]
[ext_resource type="Script" path="res://scripts/hitbox.gd" id="3_cfv26"]
[ext_resource type="Script" path="res://scripts/state_machine.gd" id="4_d476q"]
[ext_resource type="Script" path="res://scripts/mob_states/builder_states/builder_idle.gd" id="5_81rsl"]
[ext_resource type="Script" path="res://scripts/mob_states/builder_states/builder_walking.gd" id="6_q2xqq"]
[ext_resource type="Script" path="res://scripts/mob_states/builder_states/builder_dying.gd" id="7_e7sqj"]
[ext_resource type="Script" path="res://scripts/mob_states/builder_states/builder_building.gd" id="8_n5mbf"]
[ext_resource type="PackedScene" uid="uid://c64kdkeybuyfm" path="res://scenes/steering.tscn" id="9_0q24m"]
[ext_resource type="PackedScene" uid="uid://ck5j4uyt7yhnn" path="res://scenes/navigation_agent.tscn" id="12_8yscr"]

[sub_resource type="CircleShape2D" id="CircleShape2D_f63b6"]
radius = 8.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_gpv4s"]
radius = 3.0
height = 20.0

[sub_resource type="Animation" id="Animation_8bqc5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_ut3v2"]
resource_name = "die"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15, 16, 17]
}

[sub_resource type="Animation" id="Animation_bmfqb"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 0]
}

[sub_resource type="Animation" id="Animation_aom7y"]
resource_name = "walk"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [6, 7, 8, 9, 10, 11]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gof5e"]
_data = {
"RESET": SubResource("Animation_8bqc5"),
"die": SubResource("Animation_ut3v2"),
"idle": SubResource("Animation_bmfqb"),
"walk": SubResource("Animation_aom7y")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_yjj65"]
radius = 16.0

[node name="Builder" type="CharacterBody2D"]
script = ExtResource("1_d0omy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_f63b6")
debug_color = Color(0, 0.6, 0.701961, 0.0509804)

[node name="Hitbox" parent="." instance=ExtResource("2_dnb7x")]
unique_name_in_owner = true
collision_layer = 2
collision_mask = 0
script = ExtResource("3_cfv26")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, -11)
shape = SubResource("CapsuleShape2D_gpv4s")

[node name="HpBar" type="ProgressBar" parent="."]
unique_name_in_owner = true
modulate = Color(0, 1, 0, 1)
offset_left = -10.0
offset_top = -27.0
offset_right = 11.0
offset_bottom = -23.0
value = 75.0
show_percentage = false
script = ExtResource("2_2fjho")

[node name="Sprite" type="Sprite2D" parent="."]
unique_name_in_owner = true
y_sort_enabled = true
position = Vector2(4, -13)
texture = ExtResource("2_wvue0")
hframes = 6
vframes = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_gof5e")
}

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
unique_name_in_owner = true
script = ExtResource("4_d476q")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("5_81rsl")

[node name="Walking" type="Node" parent="StateMachine"]
script = ExtResource("6_q2xqq")

[node name="Dying" type="Node" parent="StateMachine"]
script = ExtResource("7_e7sqj")

[node name="Building" type="Node" parent="StateMachine"]
script = ExtResource("8_n5mbf")

[node name="WorkingArea" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="WorkingArea"]
position = Vector2(0, -2)
shape = SubResource("CircleShape2D_yjj65")
debug_color = Color(0, 0.6, 0.701961, 0.12549)

[node name="NavAgent" parent="." instance=ExtResource("12_8yscr")]
unique_name_in_owner = true
target_desired_distance = 30.0
avoidance_enabled = false
radius = 8.0
max_speed = 200.0
debug_enabled = false

[node name="Steering" parent="." instance=ExtResource("9_0q24m")]
unique_name_in_owner = true

[connection signal="value_changed" from="HpBar" to="HpBar" method="_on_value_changed"]
[connection signal="velocity_computed" from="NavAgent" to="." method="_on_nav_agent_velocity_computed"]
